# py-pdf-chat

./: .env.example  README.md  pyproject.toml
app/: app.py
faiss_index/: index.faiss  index.pkl
